--- a/sec/build.gradle
+++ b/sec/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 	api project(':api')
 
 
-	api 'org.springframework.security:spring-security-config:5.5.2'
-	api 'org.springframework.security:spring-security-web:5.5.2'
+	api 'org.springframework.security:spring-security-config'
+	api 'org.springframework.security:spring-security-web'
 	api 'javax.servlet:javax.servlet-api:4.0.1'
 }
