--- a/apiregister-cli-rest/build.gradle
+++ b/apiregister-cli-rest/build.gradle
@@ -6,17 +6,10 @@ dependencies {
 	api project(':api')
 	api project(':apiregister-domain-rest')
 	
-	api 'org.springframework:spring-context:5.2.3.RELEASE'
-	api 'org.springframework:spring-web:5.2.3.RELEASE'
-	api 'org.springframework.boot:spring-boot-autoconfigure:2.3.5.RELEASE'
+	api 'org.springframework:spring-web'
 	
 	api 'org.openapitools:jackson-databind-nullable:0.2.1' // should come from platform.gradle.openapi plugin
 	
-	
-	testImplementation('org.springframework.boot:spring-boot-starter-test:2.3.4.RELEASE') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-		exclude module: "logback-classic"
-	}
 	testImplementation 'org.mock-server:mockserver-spring-test-listener:5.11.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
