--- a/json/build.gradle
+++ b/json/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
 	api project(':domain')
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.2.6.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 }
