[#5784] session parameter change subscription with ObjectChangePublisher

--- a/ui-api/src/main/resources/descriptors/tree-api.yaml
+++ b/ui-api/src/main/resources/descriptors/tree-api.yaml
@@ -36,6 +36,9 @@ components:
           $ref: '#/components/schemas/TreeNodeKind'
         identifier:
           type: string
+        objectUri:
+          type: string
+          format: uri
         caption:
           type: string
         shortDescription:
