[#5793] SecurityGroup - builtIn flag

--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -186,10 +186,13 @@ components:
         description:
           type: string
           description: 'The description of the group'
-        kind:
+        kindCode:
           type: string
-          format: uri
-          description: 'The uri of the kind of the group. Eg.: role, organization, team etc.'
+          description: 'The kind code of the group. Eg.: role, organization, team etc.'
+        builtIn:
+          type: boolean
+          default: false
+          description: 'Built in groups are unmodifiable'
         parent:
           type: string
           format: uri
