--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ subprojects {
 		withSourcesJar()
 	}
 
+	tasks.withType(Javadoc) {
+		options.addStringOption('Xdoclint:none', '-quiet')
+	}
+
     publishing {
         publications {
             maven(MavenPublication) {
