[#6013] add selectedNodeIdentifier to TreeModel

--- a/ui-api/src/main/resources/descriptors/tree-api.yaml
+++ b/ui-api/src/main/resources/descriptors/tree-api.yaml
@@ -27,6 +27,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TreeNode'
+        selectedNodeIdentifier:
+          type: string
     TreeNode:
       type: object
       required:
