[#5993] add keepWorkingDirectory property to sb4starter

--- a/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
@@ -23,7 +23,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SB4Command'
-          
+        keepWorkingDirectory:
+          type: boolean
+          default: false
+
     SB4Command:
       type: object
       required: [id, commandKind, restUrl, sb4Files, command, successfulExitCodes, onErrorCommands]
