--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,14 @@ subprojects {
 		withSourcesJar()
 	}
 
+gradle.taskGraph.whenReady {
+    allTasks
+        .filter { it.hasProperty("duplicatesStrategy") } // Because it's some weird decorated wrapper that I can't cast.
+        .forEach {
+            it.setProperty("duplicatesStrategy", "EXCLUDE")
+        }
+}
+
     publishing {
         publications {
             maven(MavenPublication) {
