[#6425] fix github pipeline

--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,6 @@ sonarqube {
   }
 }
 
-gradle.taskGraph.whenReady {
-    allTasks
-        .filter { it.hasProperty("duplicatesStrategy") } // Because it's some weird decorated wrapper that I can't cast.
-        .forEach {
-            it.setProperty("duplicatesStrategy", "EXCLUDE")
-        }
-}
-
-
 subprojects {
 	
     apply plugin: 'org.smartbit4all.platform.gradle.java'
@@ -36,6 +27,10 @@ subprojects {
 
 	java {
 		withSourcesJar()
+	}
+
+	sourcesJar {
+		duplicatesStrategy = 'exclude'
 	}
 
     publishing {
