--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -12,7 +12,8 @@ smartbit4all {
   	modelPackagePostfix = "bean"
   	importMappings = [
   		"BinaryData": "org.smartbit4all.api.binarydata.BinaryData",
-  		"BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent"
+  		"BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent",
+    	"LocalDateTime": "java.time.LocalDateTime"
   	]
   }
 }
