[#6464] NavigationTarget.viewObjectUri -> objectUri

--- a/ui-api/src/main/resources/descriptors/navigation-api.yaml
+++ b/ui-api/src/main/resources/descriptors/navigation-api.yaml
@@ -39,7 +39,7 @@ components:
           format: uuid
         viewName:
           type: string
-        viewObjectUri:
+        objectUri:
           type: string
           format: uri
         parameters:
