--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include 'sql'
 include 'json'
 include 'remote'
 include 'ui-api'
+include 'ui-api-srv-rest'
 include 'ui-common'
 include 'ui-vaadin'
 include 'api'
